charts/argocd/base/argocd-server-ingress.yaml
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: argocd-server
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    external-dns.alpha.kubernetes.io/ingress-hostname-source: defined-hosts-only
    # nginx.ingress.kubernetes.io/preserve-trailing-slash: "true"
spec:
  ingressClassName: nginx
  tls:
    - secretName: argocd-cert
      hosts:
        - argocd.frost.haus
  rules:
  - host: argocd.frost.haus
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: argocd-server
            port:
              name: https
